--- a/src/main/resources/templates/form/board/editForm.html
+++ b/src/main/resources/templates/form/board/editForm.html
@@ -18,8 +18,13 @@
             padding: 10px;
             float: right;
         }
+        img{
+            max-width: 250px;
+        }
     </style>
+
     <title>write</title>
+
 </head>
 
 <body>
@@ -31,17 +36,22 @@
                 <p>write what you mind</p>
             </div>
             <div class="board_write_wrap">
+
+                <button class="w-100 btn btn-dark btn-lg" onclick="openPopup()" type="button">검색</button>
+
+                <script th:src="@{/js/popup.js}"></script>
+
                 <div class="board_write">
                     <div id="section">
                         <div class="title">
-                            <label for="title" th:text="#{label.board.title}">title</label>
-                            <input type="text" id="title" th:field="*{title}" class="form-control" placeholder="title">
+                            <label for="add_form_title" th:text="#{label.board.title}">title</label>
+                            <input type="text" id="add_form_title" th:field="*{title}" class="form-control" placeholder="title">
                         </div>
                         <!-- change.made -->
                         <div class="row">
                             <div class="col">
-                                <label for="writer" th:text="#{label.board.writer}">writer</label>
-                                <input type="text" id="writer" th:field="*{creator}"class="form-control" placeholder="who write/make it">
+                                <label for="add_form_creator" th:text="#{label.board.writer}">writer</label>
+                                <input type="text" id="add_form_creator" th:field="*{creator}"class="form-control" placeholder="who write/make it">
                             </div>
                             <!-- change.made-->
                             <div class="col">
@@ -91,8 +101,13 @@
                     </div>
                 </div>
                 <div id="nav">
-                    <a>FILE URL</a>
-                    <input th:field="*{imageURL}" class="form-control" placeholder="search Link"/>
+                    <label for="add_form_imageURL">FILE URL</label>
+                    <input th:field="*{imageURL}" class="form-control"
+                           placeholder="search Link" id="add_form_imageURL"/>
+                    <button class="btn btn-secondary" onclick="previewImage()" type="button">preview</button>
+                    <br>
+                    <img id="preview" alt="이미지 미리보기" style="display: none;">
+                    <script th:src="@{/js/preview.js}"></script>
                 </div>
             </div>
         </form>
