--- a/src/main/resources/templates/form/board/addForm.html
+++ b/src/main/resources/templates/form/board/addForm.html
@@ -18,6 +18,9 @@
             padding: 10px;
             float: right;
         }
+        img{
+            max-width: 250px;
+        }
     </style>
 
     <title>write</title>
@@ -98,8 +101,13 @@
                     </div>
                 </div>
                 <div id="nav">
-                    <a>FILE URL</a>
-                    <input th:field="*{imageURL}" class="form-control" placeholder="search Link" id="add_form_imageURL"/>
+                    <label for="add_form_imageURL">FILE URL</label>
+                    <input th:field="*{imageURL}" class="form-control"
+                           placeholder="search Link" id="add_form_imageURL"/>
+                    <button class="btn btn-secondary" onclick="previewImage()" type="button">preview</button>
+                    <br>
+                    <img id="preview" alt="이미지 미리보기" style="display: none;">
+                    <script th:src="@{/js/preview.js}"></script>
                 </div>
             </div>
         </form>
