FEAT: main 화면 현재 month적용

--- a/src/main/resources/templates/form/board/main.html
+++ b/src/main/resources/templates/form/board/main.html
@@ -15,7 +15,7 @@
     <div class="row">
         <div class="col">
             <!--thymeleaf를 통해date값을 가져올 예정-->
-            <h3>March</h3>
+            <h3 th:text="${month}">March</h3>
         </div>
         <div class="col">
             <!--memberId를 받아오지 않을 수 있을 때 링크 변경 필수-->
