--- a/src/main/resources/templates/form/member/signInForm.html
+++ b/src/main/resources/templates/form/member/signInForm.html
@@ -49,7 +49,14 @@
             </div>
         </div>
 
+        <hr class="my-4">
+
+        <a class="p-2" href="https://kauth.kakao.com/oauth/authorize?client_id=33f0972cedce9a91c4222b448fd41a2b&redirect_uri=http://localhost:9090/member/kakao&response_type=code">
+            <img th:src="@{/images/kakao_login_medium_wide.png}"/>
+        </a>
+        <br>
         <a href="/member/sign-up">회원가입</a>
+
 
     </form>
 
