--- a/src/main/resources/templates/form/member/signInForm.html
+++ b/src/main/resources/templates/form/member/signInForm.html
@@ -54,6 +54,9 @@
         <a class="p-2" href="https://kauth.kakao.com/oauth/authorize?client_id=33f0972cedce9a91c4222b448fd41a2b&redirect_uri=http://localhost:9090/member/kakao&response_type=code">
             <img th:src="@{/images/kakao_login_medium_wide.png}"/>
         </a>
+        <a class="p-2" href="http://localhost:9090/google">
+            <img th:src="@{/images/btn_google_signin_light_normal_web.png}">
+        </a>
         <br>
         <a href="/member/sign-up">회원가입</a>
 
