REF: kakao login api 기능 restTemplate 사용해서 logic 변경

--- a/src/main/resources/templates/form/member/signInForm.html
+++ b/src/main/resources/templates/form/member/signInForm.html
@@ -51,7 +51,7 @@
 
         <hr class="my-4">
 
-        <a class="p-2" href="https://kauth.kakao.com/oauth/authorize?client_id=33f0972cedce9a91c4222b448fd41a2b&redirect_uri=http://localhost:9090/member/kakao&response_type=code">
+        <a class="p-2" href="http://localhost:9090/kakao">
             <img th:src="@{/images/kakao_login_medium_wide.png}"/>
         </a>
         <a class="p-2" href="http://localhost:9090/google">
